--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -23,12 +23,12 @@ This is to signify that it's a partial, in this case, a header partial.-->
             <div class="navbar-nav ml-auto">
                 <% if (user) { %>
                     <span class="navbar-text mr-3">Logged in as: <%= user.email %>!</span>
-                    <form class="form-inline" action="/logout" method="POST">
+                    <form class="form-inline" action="/auth/logout" method="POST">
                         <button type="submit" class="btn btn-outline-light">Logout</button>
                     </form>
                 <% } else { %>
-                    <a class="nav-item nav-link" href="/register">Register</a>
-                    <a class="nav-item nav-link" href="/login">Login</a>
+                    <a class="nav-item nav-link" href="/auth/register">Register</a>
+                    <a class="nav-item nav-link" href="/auth/login">Login</a>
                 <% } %>
             </div>
         </div>
