make the input form EJS for user's todo list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,8 @@
   <h3>Sub-heading - Lora Medium, 30px</h3>
   <h5>Paragraph Section - Nunito Medium Italic, 20px</h5>
   <p>Paragraph - Nunito Regular, 16px</p>
+
+  <%- include('todo_input_form.ejs') %>
 </body>
 
 </html>
