--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,7 +2,7 @@
 name of this file starts with an underscore (_).
 This is to signify that it's a partial, in this case, a header partial.-->
 
-<header style="background-color: hsla(341, 100%, 82%, 1);">
+<header>
     <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="/urls">Smart TODO</a>
         <button
