--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,6 +1,24 @@
 // See: https://sass-lang.com/
 
-body,
-html {
+html,
+body {
   margin: 0;
+}
+
+main {
+  width: 80%;
+  margin: 100px 0 auto;
+}
+
+section {
+  width: 100%;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-row-container {
+  display: flex;
+  flex-direction: row;
 }
