add axios for API calls and test on TMDB API for movies

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,12 @@
 </head>
 <%- include('partials/_header') %>
 <body>
-  <h1>Heading - Montserrat Semi-Bold, 36px</h1>
-  <h3>Sub-heading - Lora Medium, 30px</h3>
-  <h5>Paragraph Section - Nunito Medium Italic, 20px</h5>
-  <p>Paragraph - Nunito Regular, 16px</p>
+<!--  <h1>Heading - Montserrat Semi-Bold, 36px</h1>-->
+<!--  <h3>Sub-heading - Lora Medium, 30px</h3>-->
+<!--  <h5>Paragraph Section - Nunito Medium Italic, 20px</h5>-->
+<!--  <p>Paragraph - Nunito Regular, 16px</p>-->
 
-  <%- include('todo_input_form.ejs') %>
+  <%- include('partials/todo_input_form.ejs') %>
 </body>
 
 </html>
