--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,7 +1,8 @@
 footer {
   background: #757C60;
   width: 100%;
-  padding: 1rem;
+  padding: 2rem 4rem;
   position: relative;
   bottom: 0;
+  color: #fff;
 }
