--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -3,7 +3,7 @@ name of this file starts with an underscore (_).
 This is to signify that it's a partial, in this case, a header partial.-->
 
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark">
+    <nav class="navbar navbar-expand-md navbar-light">
         <a class="navbar-brand" href="/urls">Smart TODO</a>
         <button
                 class="navbar-toggler"
