Successfully make 3 API calls for restaurants, books and movies. The result is strictly restraint to be caseinsensitive but exact spelled.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,10 @@
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="stylesheet" href="/styles/layout.css" />
 
-  <script src="/vendor/jquery-3.0.0.js"></script>
-  <script defer src="/scripts/app.js"></script>
+    <script src="/vendor/jquery-3.0.0.js"></script>
+    <script defer src="/scripts/app.js"></script>
+
+
 </head>
 <%- include('partials/_header') %>
 <body>
@@ -29,7 +31,9 @@
 <!--  <h5>Paragraph Section - Nunito Medium Italic, 20px</h5>-->
 <!--  <p>Paragraph - Nunito Regular, 16px</p>-->
 
-  <%- include('partials/todo_input_form.ejs') %>
+    <%- include('partials/todo_input_form.ejs') %>
+
+    <script src="/scripts/dropdown-category.js"></script>
 </body>
 
 </html>
