--- a/views/partials/todo_input_form.ejs
+++ b/views/partials/todo_input_form.ejs
@@ -6,7 +6,7 @@ It is displayed in a dropdown for manual changes if neede.
 How: add Javascript to make an API call
 -->
 
-<form id="todoForm" action="/api/todo" method="POST" onsubmit="return handleSubmit(event);">
+<form id="todoForm" action="/api/todo/categorize" method="POST">
     <div class="mb-3">
         <label for="itemName" class="form-label">Quick Add A ToDo</label>
         <div class="input-group">
@@ -19,49 +19,11 @@ How: add Javascript to make an API call
     <div class="mt-3">
         <label>This will be added to:</label>
         <select id="categoryDropdown" name="category" class="form-select">
-            <option value="Film / Series (To Watch)">Watchlist</option>
-            <option value="Restaurants / Cafes (To Eat)">Restaurants</option>
-            <option value="Books (To Read)">Books</option>
-            <option value="Products (To Buy)">Products</option>
+            <option value="ToWatch">Watchlist</option>
+            <option value="ToEat">Restaurants</option>
+            <option value="ToRead">Books</option>
+            <option value="ToBuy">Products</option>
             <option value="Uncategorized">Uncategorized</option>
         </select>
     </div>
 </form>
-
-<script>
-  // handle form submission
-  async function handleSubmit(event) {
-    event.preventDefault(); // prevent the form from submitting by default
-
-    const itemName = document.getElementById("itemName").value;
-
-    if (!itemName) {
-      alert("Please enter an item.");
-      return;
-    }
-
-    try {
-      // make an API call to categorize the item
-      const response = await fetch('/api/todo/categorize', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ itemName: itemName })
-      });
-
-      const data = await response.json();
-
-      if (response.ok) {
-        // update the dropdown based on the categorized result
-        const categoryDropdown = document.getElementById("categoryDropdown");
-        // set the value in the dropbox to the category returned from the server
-        categoryDropdown.value = data.category;
-      } else {
-        console.error(data.error);
-        alert("Error categorizing item.");
-      }
-    } catch (error) {
-      console.error('Error:', error);
-      alert('An error occurred. Please try again.');
-    }
-  }
-</script>
