SHOW display information in the UI, but not completed yet.

--- a/views/partials/todo_input_form.ejs
+++ b/views/partials/todo_input_form.ejs
@@ -27,3 +27,6 @@ How: add Javascript to make an API call
         </select>
     </div>
 </form>
+
+<!-- Add a section to display the information -->
+<div id="displayInformation"></div>
