--- a/styles/todo-items.scss
+++ b/styles/todo-items.scss
@@ -6,26 +6,56 @@
 
   border-radius: 16px;
   position: relative;
-  margin-bottom: 24px;  
+  margin-bottom: 24px;
 
   .todo-item-card {
     background-color: #fff;
     border-radius: 16px;
-    
+
     padding: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
+
+    &.completed-item {
+      background-color: #757c60;
+      color: #fff;
+      
+      &:not(i) {
+        text-decoration: line-through;
+      }
+
+      .complete-task-btn {
+        border: 10px solid #757c60;
+
+        img {
+          visibility: visible;
+          object-fit: contain;
+          height: 100%;
+        }
+      }
+    }
+
+    &:not(.completed-item) {
+      .complete-task-btn {
+        border: 10px solid #fff;
+      }
+
+      img {
+        visibility: hidden;        
+        object-fit: contain;
+        height: 100%;
+      }
+    }
 
     .todo-item-info {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
-      
-      .todo-item-text{
+
+      .todo-item-text {
         display: flex;
         flex-direction: column;
       }
@@ -42,7 +72,6 @@
 }
 
 .complete-task-btn {
-  border: 10px solid #fff;
   border-radius: 100%;
   height: 5rem;
   width: 5rem;
