--- a/views/includes.ejs
+++ b/views/includes.ejs
@@ -13,6 +13,8 @@ Just drop this in the <head> tag at the top of each HTML Page
 <link rel="stylesheet" href="/styles/todo-items.css" />
 <link rel="stylesheet" href="/styles/footer.css" />
 <link rel="stylesheet" href="/styles/navbar.css" />
+<link rel="stylesheet" href="/styles/hero.css" />
+<link rel="stylesheet" href="/styles/quick-add.css" />
 
 <!-- Bootstrap CSS -->
 <link
