SHOW display information in the UI

--- a/views/partials/todo_input_form.ejs
+++ b/views/partials/todo_input_form.ejs
@@ -29,4 +29,6 @@ How: add Javascript to make an API call
 </form>
 
 <!-- Add a section to display the information -->
-<div id="displayInformation"></div>
+<div id="displayInformation">
+    <h6>This is display info</h6>
+</div>
