more home page styles

--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -1,26 +1,29 @@
-#home-banner {
+.hero-header {
   width: 100%;
   height: 50vh;
   background-color: #f9f9f9;
   position: relative;
-  padding: 0 20%;
+  padding: 0 10%;
   margin-bottom: 36px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: flex-start;
+
+  .hero-content {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+  }
 
 
   img {
-    width: auto;
-    height: 75%;
+    max-width: 50%;
+    max-height: 100%;
+    height: auto;
     object-fit: contain;
     position: absolute;
     right: 0;
     top: 0;
   }
 
-  #hero-text{
-    position: relative;
-    left: -50px;
-    bottom: 50px;
-  }
 }
