--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,6 +4,7 @@ html,
 body {
   margin: 0;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 main {
@@ -11,14 +12,18 @@ main {
   margin: 0 auto;
 }
 
-#home-quick-todo,
-#home-lists,
-#home-todos-glance {
+.home-quick-todo,
+.home-lists,
+.home-todos-glance {
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: 128px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  h1{
+    margin-bottom: 24px;
+  }
 }
 
 .flex-row-container {
