--- a/styles/quick-add.scss
+++ b/styles/quick-add.scss
@@ -1,4 +1,4 @@
-#home-quick-todo {
+.home-quick-todo {
   width: 100%;
   h1 {
     margin-bottom: 24px;
@@ -13,8 +13,22 @@
 
     .task-name {
       width: 75%;
-      border: 2px solid #646464;
+      border: 2px solid #aaa7a7;
       border-radius: 32px;
+      padding: 0 1rem;
+      font-family: Nunito;
+    }
+
+    .select-list {
+      border-radius: 32px;
+      border: 2px solid #aaa7a7;
+      padding: 0 1rem;
+      cursor: pointer;
+
+      optgroup{
+        padding: 1rem;
+        margin-top: 1rem;
+      }
     }
 
     button {
