--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,7 @@ body {
   min-height: 100vh;
   font-family: Nunito, sans-serif;
   font-weight: normal;
+  margin-left: 50px;
 
   /* background: rgb(163, 208, 219);
   background: linear-gradient(
@@ -96,7 +97,7 @@ p, .paragraph {
   top: -50px;
   p {
     margin-bottom: 0;
-    
+
   }
 
   &:hover{
