added basics of list task page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,12 +83,6 @@
         <%- include('partials/_task-item', {completed: false}) %>
       </section>
     </main>
-    <footer>
-      <h6>Smart ToDo App</h6>
-      <p>Some Link</p>
-      <p>Some Link</p>
-      <p>Some Link</p>
-      <p>Some Link</p>
-    </footer>
+    <%- include('partials/_footer') %>
   </body>
 </html>
