--- a/styles/main.scss
+++ b/styles/main.scss
@@ -25,19 +25,12 @@ body {
   font-family: Nunito, sans-serif;
   font-weight: normal;
 
-  /* background: rgb(163, 208, 219);
-  background: linear-gradient(
-    227deg,
-    rgba(163, 208, 219, 1) 0%,
-    rgba(163, 176, 219, 1) 20%,
-    rgba(163, 173, 219, 1) 34%,
-    rgba(163, 219, 208, 1) 59%,
-    rgba(163, 208, 219, 1) 74%,
-    rgba(163, 208, 219, 1) 100%
-  ); */
-
   background: rgb(250,214,190);
   background: linear-gradient(0deg, rgba(255,226,199,1) 0%, rgba(249,249,249,1) 75%);
+
+  &>:nth-child(2){
+      padding-top: 75px;
+  }
 }
 
 h1, h2, .heading {
