--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,7 +4,7 @@ This is to signify that it's a partial, in this case, a header partial.-->
 
 <header>
     <nav class="navbar navbar-expand-md navbar-light">
-        <a class="navbar-brand" href="/urls">Smart TODO</a>
+        <a class="navbar-brand" href="/">Smart TODO</a>
         <button
                 class="navbar-toggler"
                 type="button"
