Added tasks page & updated complete task action with jquery

--- a/views/includes.ejs
+++ b/views/includes.ejs
@@ -30,3 +30,4 @@ crossorigin="anonymous"
 <!-- JS Scripts -->
 <script src="/vendor/jquery-3.0.0.js"></script>
 <script defer src="/scripts/app.js"></script>
+<script defer src="/scripts/complete-task.js"></script>
