tasks data now displaying dynamically from db data

--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -12,6 +12,10 @@
     width: 80%;
     display: flex;
     justify-content: space-between;
+
+    .hero-text{
+      width: -webkit-fill-available;
+    }
   }
 
 
