--- a/views/partials/_hero-banner.ejs
+++ b/views/partials/_hero-banner.ejs
@@ -1,6 +1,6 @@
 <section class="hero-header">
   <div class="hero-content">
-    <div class="hero-text heading">Some text here</div>
+    <div class="hero-text heading"><%- headerText ? headerText : 'Some text here' %></div>
     <div class="hero-text spacer">&nbsp;</div>
   </div>
   <img src="../assets/header2-flower.png"/>
