set up dynamic routes for /todos pages

--- a/views/partials/_hero-banner.ejs
+++ b/views/partials/_hero-banner.ejs
@@ -3,5 +3,5 @@
     <div class="hero-text heading"><%- headerText ? headerText : 'Some text here' %></div>
     <div class="hero-text spacer">&nbsp;</div>
   </div>
-  <img src="../assets/header2-flower.png"/>
+  <img src="../assets/flower-header.png"/>
 </section>
