--- a/views/includes.ejs
+++ b/views/includes.ejs
@@ -31,3 +31,6 @@ crossorigin="anonymous"
 <script src="/vendor/jquery-3.0.0.js"></script>
 <script defer src="/scripts/app.js"></script>
 <script defer src="/scripts/complete-task.js"></script>
+
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="/assets/flower-icon.png">
