tasks now display dynamically based on url and logged in status

--- a/views/view-tasks.ejs
+++ b/views/view-tasks.ejs
@@ -16,7 +16,7 @@
   </head>
   <%- include('partials/_header') %>
   <body>
-    <%- include('partials/_hero-banner', {headerText: "List To-Dos"}) %>
+    <%- include('partials/_hero-banner', {headerText}) %>
     <main>
       <h3>Filter To-Dos</h3>
       <form>
