--- a/views/partials/_task-item.ejs
+++ b/views/partials/_task-item.ejs
@@ -1,18 +1,17 @@
 <div class="todo-item">
   <div class="todo-item-card <%= completed ? 'completed-item' : '' %>">
     <div class="todo-item-info">
-      <button
-        type="button"
-        class="complete-task-btn"
-        name="complete-task"
-        value="complete"
-        onclick="(function() {
-          console.log('clicked todo item', 'isCompleted?', <%= completed %>);
-          //Do something
-        })()"
-      >
-      <img src="../assets/checkmark.png"/>
-      </button>
+      <form action="/todos/<%= id %>/mark-complete" method="POST">
+        <button
+          type="button"
+          class="complete-task-btn"
+          name="complete-task"
+          value="complete"
+          onclick=""
+        >
+          <img src="../assets/checkmark.png" />
+        </button>
+      </form>
       <div class="todo-item-text">
         <span class="todo-item-title">Do a really important thing</span>
         <span class="todo-item-deadline">Due in 23 days</span>
