--- a/views/partials/todo_input_form.ejs
+++ b/views/partials/todo_input_form.ejs
@@ -5,6 +5,8 @@ It is displayed in a dropdown for manual changes if neede.
 
 How: add Javascript to make an API call
 -->
+<%- include('partials/todo_input_form.ejs') %>
+
 
 <form id="todoForm" action="/api/todo/categorize" method="POST">
     <div class="mb-3">
