--- a/views/partials/_task-item.ejs
+++ b/views/partials/_task-item.ejs
@@ -1,7 +1,7 @@
 <div class="todo-item">
   <div class="todo-item-card <%= completed ? 'completed-item' : '' %>">
     <div class="todo-item-info">
-      <form action="/todos/<%= id %>/mark-complete" method="POST">
+      <form action="" method="POST">
         <button
           type="button"
           class="complete-task-btn"
