Tasks can now be filtered!

--- a/views/includes.ejs
+++ b/views/includes.ejs
@@ -33,4 +33,4 @@ crossorigin="anonymous"
 <!-- <script defer src="/scripts/complete-task.js"></script> -->
 
 <!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="/assets/flower-favicon.jpg">
+<link rel="icon" type="image/x-icon" href="/assets/flower-icon.png">
