--- a/views/partials/_task-item.ejs
+++ b/views/partials/_task-item.ejs
@@ -1,13 +1,12 @@
 <div class="todo-item">
   <div class="todo-item-card <%= completed ? 'completed-item' : '' %>">
     <div class="todo-item-info">
-      <form action="/todos/<%= id %>/mark-complete" method="POST">
+      <form action="" method="POST">
         <button
           type="button"
           class="complete-task-btn"
           name="complete-task"
           value="complete"
-          onclick=""
         >
           <img src="../assets/checkmark.png" />
         </button>
