--- a/styles/todo-items.scss
+++ b/styles/todo-items.scss
@@ -28,6 +28,7 @@
 
       .complete-task-btn {
         border: 10px solid #757c60;
+        background: #f9f9f9;
 
         img {
           visibility: visible;
@@ -40,6 +41,7 @@
     &:not(.completed-item) {
       .complete-task-btn {
         border: 10px solid #fff;
+        background: #d9d9d9;
       }
 
       img {
@@ -78,6 +80,7 @@
   position: relative;
   left: -3rem;
   cursor: pointer;
+  
 
   &:focus {
     outline: none;
