Add Jquery for error container. Error if item is already in the list. Clear it for the next search.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -97,3 +97,9 @@ p, .paragraph {
     text-decoration: none;
   }
 }
+
+.error-container {
+  color: #c4375f;
+  display: none;
+  margin-top: 10px;
+}
