--- a/views/includes.ejs
+++ b/views/includes.ejs
@@ -1,6 +1,6 @@
 <!--
 This file is for keeping all the css and js links so as to keep main files tidier
-Just drop this in the <head> tag at the top of each HTML Page 
+Just drop this in the <head> tag at the top of each HTML Page
 -->
 <!-- Provided CSS -->
 <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
@@ -30,7 +30,8 @@ crossorigin="anonymous"
 <!-- JS Scripts -->
 <script src="/vendor/jquery-3.0.0.js"></script>
 <script defer src="/scripts/app.js"></script>
-<!-- <script defer src="/scripts/complete-task.js"></script> -->
+<script defer src="/scripts/complete-task.js"></script>
+
 
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="/assets/flower-favicon.jpg">
