user can update the category manually successfully.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
                   <option value="Uncategorized">Uncategorized</option>
               </select>
 
-              <button id="manualSubmitButton" class="default-btn" type="submit">
+              <button id="manualChangeButton" class="default-btn" type="submit">
                   Confirm Change
               </button>
           </div>
@@ -106,5 +106,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/scripts/client.js"></script>
     <script src="/scripts/dropdown-category.js"></script>
+    <script src="/scripts/manual-change.js"></script>
+
   </body>
 </html>
